# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/scripts/: brain_even.py  brain_games.py  brain_games.pyu  cli.py
brain_gamess/: cli.py  logic.py
brain_gamess/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_gamess/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
