[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maksim Lesnikov <maximborzya75@gmail.com>"]
readme = "README.md"
packages = [
    {include = "brain_gamess"},
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_gamess.scripts.brain_games:main"
brain-even = "brain_gamess.scripts.brain_even:main"
brain-calc = "brain_gamess.scripts.brain_calc:main"
brain-gcd = "brain_gamess.scripts.brain_gcd:main"
brain-progression = "brain_gamess.scripts.brain_progression:main"
brain-prime = "brain_gamess.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
